syntax = 'proto3';

package auth;

import "google/protobuf/timestamp.proto";
import "models/user.proto";

message AuthLogin {
  string login = 1;
  string password = 2;
}

message AuthMe {
  string accessToken = 1;
}

message AuthRefresh {
  string refreshToken = 1;
}

message AuthToken {
  string value = 1;
  google.protobuf.Timestamp expireDate = 2;
}

message AuthTokens {
  AuthToken accessToken = 1;
  AuthToken refreshToken = 2;
}

message AuthData {
  models.user.User user = 1;
  AuthTokens tokens = 2;
}

service AuthService {
  rpc login (AuthLogin) returns (AuthData) {}
  rpc refreshToken (AuthRefresh) returns (AuthData) {}
  rpc me (AuthMe) returns (models.user.User) {}
}
