syntax = 'proto3';

package file;

import "common/service.proto";
import "models/file.proto";

// query

message FileQuery {
  optional string id = 1;
  repeated string ids = 2;
  optional string mimeType = 3;
  repeated string mimeTypes = 4;
  optional bool isPublic = 5;
  optional string user = 6;
  repeated string users = 7;
  optional models.file.FileType type = 8;
  optional string extension = 9;
}

message FileRequest {
  optional FileQuery query = 1;
}

// get

message FileList {
  repeated models.file.File items = 1;
}

message FileGetListResponse {
  repeated models.file.File items = 1;
  int32 total = 2;
}

// create

message FileCreate {
  string user = 1;
  string name = 2;
  string originalName = 3;
  int32 size = 4;
  string mimeType = 5;
  bool isPublic = 6;
}

// upload

message FileUpload {
  oneof payload {
    FileCreate create = 1;
    bytes chunk = 2;
    bool isFinished = 3;
  }
}

// update

message FileUpdateSet {
  optional bool isPublic = 1;
  optional string name = 2;
}

message FileUpdate {
  optional FileUpdateSet set = 1;
}

message FileUpdateRequest {
  FileQuery query = 1;
  FileUpdate update = 2;
}

message FileUpdateByIdRequest {
  string id = 1;
  FileUpdate update = 2;
}

service FileService {
  rpc getById (common.service.IdField) returns (models.file.File) {}
  rpc getList (common.service.GetListRequest) returns (FileGetListResponse) {}
  rpc createOne (FileCreate) returns (models.file.File) {}
  rpc uploadOne (stream FileUpload) returns (models.file.File) {}
  rpc updateById (FileUpdateByIdRequest) returns (models.file.File) {}
  rpc deleteById (common.service.IdField) returns (models.file.File) {}
}
